<resources>
    <string name="app_name">Bike Security</string>
    <string name="device_status">Device Status</string>
    <string name="alarm_on">Alarm On</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="lock">Lock</string>
    <string name="un_lock">UnLock</string>
    <string name="find_bike">Find Bike</string>
    <string name="voice_command">Voice Command</string>
    <string name="more_options">More Options</string>
    <string name="menu">Menu</string>
    <string name="setup">Setup</string>

    <string name="setup_device">Setup Device</string>
    <string name="device_num">Device Number:- *****</string>
    <string name="enter_device_sim_num">Enter Device SIM Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="key_on">Key On - Call When Unlock</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="adjust_vibration">Adjust Vibration Sensitivity</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="autolock_options">Autolock options</string>
    <string name="remote_options">Remote Options</string>

    <string name="about_us">About Us</string>
    <string name="user_manual">User Manual</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="help_line">HelpLine</string>
</resources>