<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/deviceStatusButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_status"
                    android:text="@string/device_status"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/findBikeButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_location"
                    android:text="@string/find_bike"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/alarmOnButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_alarm_on"
                    android:text="@string/alarm_on"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/alarmOffButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_alarm_off"
                    android:text="@string/alarm_off"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/lockButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_lock"
                    android:text="@string/lock"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/unLockButton"
                    style="@style/MyButtonStyle"
                    android:drawableTop="@drawable/ic_un_lock"
                    android:text="@string/un_lock"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/moreOptionButton"
                style="@style/MyButtonStyle"
                android:drawableTop="@drawable/ic_more_options"
                android:text="@string/more_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/menuButton"
                style="@style/MyButtonStyle"
                android:drawableTop="@drawable/ic_menu"
                android:text="@string/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/setupButton"
                style="@style/MyButtonStyle"
                android:drawableTop="@drawable/ic_setting"
                android:text="@string/setup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/voiceCommandFloatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:src="@drawable/ic_voice_command"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UnusedAttribute" />
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/mainActivityGifImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorGray"
        android:visibility="gone"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>