<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.SetupActivity">
    <TextView
        android:id="@+id/setUpTitleTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/setup_device"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/deviceNumTextView"
        app:layout_constraintTop_toBottomOf="@+id/setUpTitleTextView"
        android:text="@string/device_num"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/inputDeviceNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/deviceNumTextView"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/edit_text_background"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="number"
        android:hint="@string/enter_device_sim_num"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/inputDeviceNumberEditText"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">
        <Button
            android:id="@+id/deviceNumberCancelButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyButtonStyle"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/cancel"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/deviceNumberSaveButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyButtonStyle"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/save"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>