<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="@dimen/_10sdp"
    tools:context=".more_option.MoreOptionActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/parentOne"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@color/colorLightGray"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/MyTitleTextViewStyle"
                android:text="@string/key_on"
                android:textSize="@dimen/_18ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:id="@+id/keyOnActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_up"
                    android:text="@string/activate"
                    android:textStyle="normal"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/keyOnDeActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_down"
                    android:text="@string/deactivate"
                    android:textStyle="normal"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/parentTwo"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/colorLightGray"
            app:layout_constraintTop_toBottomOf="@id/parentOne"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/MyTitleTextViewStyle"
                android:text="@string/adjust_vibration"
                android:textSize="@dimen/_18ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:id="@+id/adjustVibrationLowButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_low"
                    android:text="@string/low"
                    android:textStyle="normal"
                    android:textSize="@dimen/_9ssp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/adjustVibrationMediumButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_medium"
                    android:text="@string/medium"
                    android:textStyle="normal"
                    android:textSize="@dimen/_7ssp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/adjustVibrationHighButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_high"
                    android:text="@string/high"
                    android:textStyle="normal"
                    android:textSize="@dimen/_9ssp"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/parentThree"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/colorLightGray"
            app:layout_constraintTop_toBottomOf="@id/parentTwo"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/MyTitleTextViewStyle"
                android:text="@string/autolock_options"
                android:textSize="@dimen/_18ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:id="@+id/autoLockActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_up"
                    android:text="@string/activate"
                    android:textStyle="normal"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/autoLockDeActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_down"
                    android:text="@string/deactivate"
                    android:textStyle="normal"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/parentFour"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/colorLightGray"
            app:layout_constraintTop_toBottomOf="@id/parentThree"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/MyTitleTextViewStyle"
                android:text="@string/remote_options"
                android:textSize="@dimen/_18ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">
                <Button
                    android:id="@+id/remoteOptionActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_up"
                    android:text="@string/activate"
                    android:textStyle="normal"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/remoteOptionDeActivateButton"
                    style="@style/MyButtonStyle"
                    app:icon="@drawable/ic_arrow_down"
                    android:text="@string/deactivate"
                    android:textStyle="normal"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:letterSpacing="0"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>
        </LinearLayout>
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/moreOptionActivityGifImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorWhite"
            android:visibility="gone"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>